ChatServiceImpl issue resolved